tests/pos/lists/list-head-01.ts

/*@ foo :: () => {v:number | v > 0} */

function foo():number{
  return head({data: 1, next: null});
}
